[package]
name = "webgl-matrix"
version = "0.1.0"
authors = ["Lion Ackermann"]
edition = "2018"
license = "MIT"
keywords = ["matrix", "webgl", "lightweight", "wasm"]
readme = "README.md"
documentation = "https://docs.rs/webgl-matrix"
homepage = "https://github.com/liona24/webgl-matrix"
repository = "https://github.com/liona24/webgl-matrix"
description = "A lightweight matrix library targeting ease of use"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["Matrix4", "Matrix3"]

SliceOps = []
Vector4 = ["SliceOps"]
Vector3 = ["SliceOps"]
Matrix4 = ["Vector4"]
Matrix3 = ["Vector3"]
